--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,17 @@
-name: base
+name: example-environment
 channels:
   - conda-forge
   - bioconda
   - defaults
 dependencies:
-  - python=3.9
+  - python=3.11
+  - r-base=4.0
+  - r-dplyr
+  - r-ggplot2
+  - r-reshape2
+  - r-tidyverse
+  - r-plotly
+  - r-stringr
   - numpy
   - psutil
   - toolz
@@ -14,16 +21,10 @@ dependencies:
   - partd
   - bokeh
   - dask
-  - r-base=4.0
-  - r-dplyr
-  - r-ggplot2
-  - r-reshape2
-  - r-tidyverse
-  - r-plotly
-  - r-stringr
   - pip
   - pip:
-    - plotly
     - matplotlib
     - scikit-learn
-    - numpy
+    - statsmodels
+    - seaborn
+
